hw05/test/zm-minusExp-error.fmj
public int main() {
    int a = 3;
    int [] arr;
    a = -arr; // error
    return a;
}
